--- a/ds1/boss-guides/09.html
+++ b/ds1/boss-guides/09.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[guide name] guide</title>
+    <title>Dark Souls Guide</title>
     <style>
         :root {
             --background: #121212;
@@ -17,15 +17,17 @@
         }
 
         body {
-            position: relative;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             background-color: var(--background);
             color: var(--text);
-            z-index: 1;
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
+            background-blend-mode: overlay;
         }
 
         body::before {
@@ -57,11 +59,6 @@
             letter-spacing: 1px;
         }
 
-        header a {
-            color: var(--primary);
-            text-decoration: none;
-        }
-
         .breadcrumbs {
             margin-bottom: 1rem;
             color: var(--secondary-text);
@@ -76,7 +73,7 @@
             text-decoration: underline;
         }
 
-        .guide-container {
+        .game-info {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 8px;
@@ -84,48 +81,68 @@
             border: 1px solid #333;
         }
 
-        .guide-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            padding-bottom: 15px;
-            border-bottom: 1px solid #333;
+        .navigation-container {
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #333;
+            margin-bottom: 25px;
         }
 
-        .guide-info {
+        .navigation-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .navigation-card {
+            background: var(--surface);
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            border: 1px solid #333;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            cursor: pointer;
+            text-align: center;
+            height: 200px;
             display: flex;
             flex-direction: column;
         }
 
-        .guide-title {
-            margin: 0 0 10px 0;
-            color: var(--primary);
+        .navigation-card:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            border-color: var(--accent);
         }
 
-        .guide-description {
-            font-style: italic;
-            color: var(--secondary-text);
+        .navigation-header {
+            padding: 15px;
+            border-bottom: 1px solid #333;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .navigation-header h3 {
+            margin: 0;
+            color: var(--primary);
+            font-size: 1.5rem;
+        }
+
+        .navigation-content {
+            padding: 15px;
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .navigation-content p {
             margin: 0;
         }
 
-        .difficulty-tag {
-            display: inline-block;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-weight: bold;
-            background-color: #3ce759;
-            color: white;
-        }
-
-        .guide-section {
-            margin-bottom: 30px;
-        }
-
-        .guide-section h3 {
-            color: var(--primary);
-            border-bottom: 1px solid #333;
-            padding-bottom: 5px;
+        .nav-icon {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            color: var(--accent);
         }
 
         .back-button {
@@ -152,7 +169,7 @@
         }
 
         @media (max-width: 768px) {
-            .weapon-list {
+            .navigation-grid {
                 grid-template-columns: 1fr;
             }
         }
@@ -161,88 +178,166 @@
 
 <body>
     <header>
-        <h1>Dark Souls: Remastered Guides</h1>
+        <h1>Dark Souls: Remastered Guide</h1>
     </header>
 
     <div class="breadcrumbs">
         <a href="../../index.html">Home</a> >
-        <a href="../landing-page.html">Dark Souls: Remastered</a> > <a href="landing-page.html">Boss Guides</a> >
-        [guide name] guide
+        <a href="../landing-page.html">Dark Souls: Remastered</a> >
+        Boss Guides
     </div>
 
-    <div class="guide-container">
-        <div class="guide-header">
-            <div class="guide-info">
-                <h2 class="guide-title">[guide name] guide</h2>
-                <p class="guide-description">[guide name] guide</p>
+    <div class="game-info">
+        <h2>Welcome, Chosen Undead</h2>
+        <p></p>
+        <p>Choose your path below to explore different aspects of this comprehensive Dark Souls guide.</p>
+    </div>
+
+    <div class="navigation-container">
+        <div class="navigation-grid">
+            <div class="navigation-card" onclick="window.location.href='01_asylum-demon.html'">
+                <div class="navigation-header">
+                    <h3>Asylum Demon</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Asylum Demon</p>
+                    </div>
+                </div>
+
             </div>
-            <span class="difficulty-tag">[diff]</span>
+            <div class="navigation-card" onclick="window.location.href='02_taurus-demon.html'">
+                <div class="navigation-header">
+                    <h3>Taurus Demon</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Taurus Demon</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='03_gargoyles.html'">
+                <div class="navigation-header">
+                    <h3>Gargoyles</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Gargoyles</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='04.html'">
+                <div class="navigation-header">
+                    <h3>Capra Demon</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Capra Demon</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='05.html'">
+                <div class="navigation-header">
+                    <h3>Gaping Dragon</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Gaping Dragon</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='06.html'">
+                <div class="navigation-header">
+                    <h3>Quelaag</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Quelaag</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='07.html'">
+                <div class="navigation-header">
+                    <h3>Iron Golem</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Iron Golem</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='08.html'">
+                <div class="navigation-header">
+                    <h3>Ornstein & Smough</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Ornstein & Smough</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='09.html'">
+                <div class="navigation-header">
+                    <h3>Lordvessel Bosses</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Lordvessel Bosses</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
+        <a href="../landing-page.html" class="back-button">Back to All DS1 Guides</a>
 
-        <div class="guide-section">
-            <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <a href="landing-page.html" class="back-button">Back to All Boss Guides</a>
-    </div>
-
-    <footer>
-        <p>Dark Souls: Remastered Guides - Praise the Sun!</p>
-    </footer>
+        <footer>
+            <p>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
+                Ancient
+                Lords. When thou ringeth the Bell of Awakening, the fate of the Undead thou shalt know.</p>
+        </footer>
 </body>
 
 </html>
